--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,7 +50,7 @@ install:
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "python -m pip install wheel"
+  - "python -m pip install wheel pytest"
   - "python -m pip install -r requirements.txt"
 
 build_script:
