--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 pica
+commands = flake8 phenotrex
 
 [testenv]
 setenv =
@@ -26,4 +26,4 @@ commands =
 addopts = -p no:warnings
 
 [coverage:run]
-omit = */pica/cli/*
+omit = */phenotrex/cli/*
