--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,5 +20,5 @@ formats: all
 python:
   version: 3.7
   install:
-    - requirements: requirements-rtd.txt
+    - requirements: requirements/rtd.txt
   system_packages: false
