using an added dependency on deepnog 1.0.1 (and by extension, biopython and torch), allow prediction of phenotypes directly from FASTA (DNA or protein FASTA) files using the `predict` command. Add new command `compute-genotype` to create a new genotype file from protein and/or DNA fasta files. Add tests.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include AUTHORS.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
+include phenotrex/bin/*
 
 recursive-include tests *
 recursive-exclude * __pycache__
