--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
-lanuage: python
+language: python
 
 python:
   - '3.7'
+  - '3.8'
 
-matrix:
+jobs:
+  allow_failures:
+    - os: osx
   include:
     - os: linux
       dist: xenial
-      sudo: false
     - os: osx
       # osx_image: xcode10.2
-      sudo: true
 
 env:
   global:
