FIX Use correct Python version on Travis (#19)
Travis previously did not always use the specified Python version,
because the miniconda env was not activated correctly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,10 @@ env:
   - PYTHONIOENCODING=UTF8
 
 before_install:
+  - export PATH="${MINICONDA_DIR}/bin:$PATH"
   - bash travis/install-conda.sh
-  - export PATH="$MINICONDA_DIR/bin:$PATH"
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - conda activate test
   - hash -r
   - bash travis/install-pip.sh
 
