--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,13 @@ jobs:
       language: shell
       osx_image: xcode10.2
       python: '3.7'
+      env: TRAVIS_PYTHON_VERSION=3.7
     - name: Python 3.8 on MacOS X (xcode 11.5)
       os: osx
       language: shell
       osx_image: xcode11.5
       python: '3.8'
+      env: TRAVIS_PYTHON_VERSION=3.8
 
 env:
   global:
